# cuni

./: .gitconfig  .gitignore  .gitlab-ci.yml  README.md  bash_emplate.sh  run_tests.sh  usefull_commands
01/: GRADING-tasks.md  factor.py
02/: GRADING-before.md  GRADING-tasks.md  before.md  tree.py  uptime.txt  wildcards.md
02/mytest/: compare.py  out
02_zpetnovazebne_uceni/: reinforcement_learning.ipynb
03/: GRADING-before.md  architecture.sh  before.md  factor.py  tree.py
04/: GRADING-before.md  before.md  inp_row_sum  nejakysubor  override.sh  row_sum.sh  second_highest_uid.sh  test.py
04_spojita_reprezentace/domaci_ukol_data/: kanpsac.py  knapsac.py
05/: GRADING-before.md
05_geneticke_programko/: geneticke_programko.ipynb
06/: GRADING-before.md  GRADING-tasks.md  barplot.sh  before.md  dir.sh  idk  ioargs.py  plot.sh  plot_input  scoring.sh  sysinfo.sh
06_neuronky/: perceptron.ipynb
07/: GRADING-tasks.md  key.pub
08/: GRADING-before.md  ip.sh  markdown.sh  markdown_input  normalize.sh  timeconv.sh  timeconv_input
08_konvoluce/: konvoluce.ipynb
08_konvoluce/tea_classification/: classification.py  divide_data.py
09/: GRADING-tasks.md  before.md  countdown.sh  dnf.txt  passwd.txt
10/: GRADING-before.md  lab10.fat.img
11/: .gitignore  GRADING-before.md  before.md
11/tapsum2json/: idk.py  requirements.txt  setup.cfg
11/tapsum2json/src/: __init__.py  main.py  tapsum2json.py
11/tapsum2json/tests/: idk.tap  idk2.tap
11_rojove algoritmy/: swarm_intelligence.ipynb  temp.py
11_rojove algoritmy/aco_salesman/: aco.py  mravce.py  result  temp.py
12/: GRADING-before.md  GRADING-tasks.md  before.md  csv_calc.sh
13/: GRADING-before.md  Makefile  _menu.html  _menu.md  before.md
14/: GRADING-before.md  GRADING-tasks.md  command.txt  shellcheck.sh
21/: GRADING.md  album.tpl.html  gallery.rc  gallery.sh  index.tpl.html
21/thm/: index.tpl.html
22/: GRADING.md  setup.cfg  templater.py
22/nswi177_jinja_templater.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
22/src/: templater.py
22/src/nswi177_jinja_templater.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
22/src/templater/: example4.j2  templater.py
23/: t.txt
23_extra/original/: poznamky
23_extra/recup_dir.1/: report.xml
linux/: .gitlab-ci.yml  run_tests.sh
linux/01/: GRADING-tasks.md
linux/02/: GRADING-before.md  tree.py
linux/03/: GRADING-before.md  GRADING-tasks.md  tree.py
linux/04/: GRADING-tasks.md  UID  disk-speeds-data.csv  inp_row_sum  row_sum.sh
linux/05/: before.md
linux/06/: plot.sh  scoring_input  sysinfo.sh
linux/07/: GRADING-before.md  before.md  file.txt
linux/08/: GRADING-tasks.md  before.md  ip.sh  ip_input  timeconv_input
linux/09/: GRADING-before.md  signals.txt
linux/10/: GRADING-tasks.md  (+4 more)
zapocet_prog2/: README.md  dft.py  fourier_series.py  fourier_transform.py  requirements.txt  svg_reader.py  test.md
(+30 files in other folders)
