[metadata]
name = nswi177-jinja-templater
author = Ben Bencik

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires = 
    jinja ~= 2.1.1

[options.packages.find]
where=src

[options.entry_points]
console_scripts = 
    nswi177-jinja-templater = src.templater:main
