[metadata]
name = nswi177-jinja-templater
author = Ben Bencik

description = this is some useful package
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires = 
    jinja2


[options.packages.find]
where=src


[options.entry_points]
console_scripts = 
    nswi177-jinja-templater = main:main
