[metadata]
name = tapsum2json
version = 0.0.1
author = bb
author_email = idk@gmail.com
description = something something
long_description = file: README.md
long_description_content_type = text/markdown
url = https://d3s.mff.cuni.cz/teaching/nswi177/labs/
keywords = learning timestamp
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    tapsum2json = main:main
